# warp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: helios-ci.yml
.helios/review-context/: PR-11-review.md  PR-13-14-15-review.md
.planning/: ARCHITECTURE.md  CONVERGED-PANEL-MAPPING.md  WEBVIEW-RESEARCH.md  WEBVIEW-WATERFALL-PLAN.md
app/: Cargo.toml
app/DockTilePlugin/: Info.plist
app/channels/oss/: dev.warp.WarpOss.desktop
app/resources/webviews/: brain.html  cortex.html  crm.html  governance.html  inbox.html  interview.html  mesh.html  pulse.html  warmloop.html
app/src/: app_menus.rs  app_state.rs  app_state_tests.rs  lib.rs  reward_view.rs  wasm_nux_dialog.rs
app/src/ai/: agent_conversations_model.rs  agent_conversations_model_tests.rs
app/src/auth/: auth_override_warning_body.rs  auth_view_body.rs  auth_view_shared_helpers.rs  login_slide.rs  mod.rs  needs_sso_link_view.rs
app/src/canvas/: canvas_view.rs  mod.rs  registrations.rs  registry.rs  types.rs
app/src/launch_configs/: launch_config.rs
app/src/pane_group/: mod.rs
app/src/persistence/: sqlite.rs
app/src/quit_warning/: mod.rs
app/src/remote_server/: mod.rs
app/src/resource_center/: main_page.rs  sections.rs  utils.rs  view.rs
app/src/settings/: ai.rs  app_icon.rs  code.rs
crates/helios_auth/: Cargo.toml
crates/helios_auth/src/: cloud_auth.rs  lib.rs  local_auth.rs
crates/helios_bridge/: Cargo.toml
crates/helios_bridge/src/: config.rs  detector.rs  lib.rs  pi_session.rs  types.rs
crates/warpui/: build.rs
script/: helios-channel-config  helios-upgrade
(+85 files in other folders)
