[package]
name = "helios_auth"
version = "0.1.0"
edition = "2021"
authors = ["Helios AGI <dev@helios-agi.dev>"]
description = "Authentication for Helios-Terminal — Pi local auth + helios-agi cloud OAuth"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
